force-app/main/default/objects/High_Risk_User_Exception__c/High_Risk_User_Exception__c.object-meta.xml
<CustomObject>
    <label>High Risk User Exception</label>
    <pluralLabel>High Risk User Exceptions</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Exception Number</label>
        <displayFormat>HRE-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>