force-app/main/default/objects/High_Risk_User_Exception__c/fields/Connected_App_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Inventory__c</fullName>
    <label>Connected App Inventory</label>
    <type>MasterDetail</type>
    <referenceTo>Connected_App_Inventory__c</referenceTo>
    <relationshipLabel>High Risk Exceptions</relationshipLabel>
    <relationshipName>High_Risk_Exception</relationshipName>
    <required>true</required>
</CustomField>