force-app/main/default/objects/High_Risk_User_Exception__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>