force-app/main/default/objects/High_Risk_User_Exception__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <required>true</required>
</CustomField>