force-app/main/default/objects/High_Risk_User_Exception__c/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <label>Permission Set</label>
    <type>Lookup</type>
    <referenceTo>PermissionSet</referenceTo>
    <relationshipLabel>Permission Set</relationshipLabel>
    <relationshipName>Exception_Permission_Set</relationshipName>
    <required>true</required>
</CustomField>