force-app/main/default/objects/High_Risk_User_Exception__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>