force-app/main/default/objects/High_Risk_User_Exception__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>High Risk Exception User</relationshipLabel>
    <relationshipName>High_Risk_User</relationshipName>
    <required>true</required>
</CustomField>